Fix phone screenshots on mobile

--- a/src/Projects/Projects.scss
+++ b/src/Projects/Projects.scss
@@ -94,28 +94,12 @@ a:active, a:hover, a, a:visited {
     border-radius: 25px;
   }
 
-  .project-phone-img {
-    height: 205px;
-    width: 120px;
-    border: 18px solid #3f3f40;
-    border-radius: 25px;
-  }
-
   .button-link, .disabled-button {
     font-size: 16px;
   }
 }
 
 @media screen and (max-width: 1024px) {
-  .project-phone-img {
-    height: 200px;
-    width: auto;
-    margin-top: 20px;
-    margin-right: 15px;
-    border: 18px solid #3f3f40;
-    border-radius: 25px;
-  }
-  
   .button-link, .disabled-button {
     font-size: 16px;
   }
@@ -126,6 +110,15 @@ a:active, a:hover, a, a:visited {
     height: 195px;
     width: 318px;
     border: 25px solid #3f3f40;
+    border-radius: 25px;
+  }
+
+  .project-phone-img {
+    height: 150px;
+    width: 84px;
+    margin-top: 20px;
+    margin-right: 15px;
+    border: 18px solid #3f3f40;
     border-radius: 25px;
   }
 }
